[package]
name = "emulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jit = {path = "../jit"}
base = {path = "../system/base"}
sync = {path = "../third-party/sync"}
resources = {path = "../third-party/resources"}
packed_struct = "0.10.0"
vm_memory = {path = "../vm_memory"}
simple-soft-float = "0.1.0"
goblin = "0.5"
libc = "*"
anyhow = "*"
multimap = "0.8.3"
thiserror = "1.0.20"
num = "0.4.0"
kernel_loader = {path = "../third-party/kernel_loader"}
setjmp = "0.1.4"
lazy_static = "1.4.0"
cfg-if = "1.0.0"
rustc-hash = { version="1.1" }
gdbstub = { version="0.6.6", optional = true, git = "https://github.com/daniel5151/gdbstub.git" }
gdbstub_arch = { version = "0.2.4", optional = true, git = "https://github.com/daniel5151/gdbstub.git" }
[features]
default = ["gdb"]
linux-usermode = []
gdb = ["gdbstub", "gdbstub_arch"]
