[package]
name = "io_uring"
version = "0.1.1"
authors = ["The Chromium OS Authors"]
edition = "2021"

[dependencies]
data_model = { path =  "../../third-party/data_model"  } # provided by ebuild
libc = "0.2.93"
remain = "0.2"
sync = { path =  "../../third-party/sync"  } # provided by ebuild
base = { path =  "../../system/base" } # provided by ebuild
thiserror = "1"

[dev-dependencies]
tempfile = "3"


